--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   <div id="meme-editor">
   <p><lable onclick="back1();" id="back1" class="back1">< Back</lable></p>
   <div class="img-meme">
-  <img class="img-meme-dp" id="output" width="200" src="img/profile.jpg" />
+  <img class="img-meme-dp" id="output" width="200" src="profile.jpg" />
   <h3 id="username" class="username">Name</h3>
   <p id="id" class="id">@_User_name_</p>
   <p id="txt-line" class="txt-line">Your text appear here !</p>
-  <img id="output2" class="img1" src="img/image.jpg" alt="">
+  <img id="output2" class="img1" src="image.jpg" alt="">
   </div>
   
   <h4 class="controls">---CONTROLS---</h4>
